# tokenwise

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  benchmark-prompt.md
.claude/: MEMORY.md
.github/workflows/: homebrew.yml  release.yml
.tokenwise/: config.json
Formula/: tokenwise.rb
docs/: README.md  benchmark-prompt.md  index.html
evals/: REPORT.md  run.py  run_semantic.py  write_run.py
evals/benchmarks/: phase5-large-baseline.json
evals/results/: 2026-03-07-032045.json  2026-03-07-033318.json  2026-03-07-125550.json  2026-03-07-130432.json  2026-03-07-131013.json  2026-03-07-131052.json  2026-03-07-131238.json  write-2026-03-07-042908.json
evals/tasks/: alamofire.json  axum.json  axum_semantic.json  bash_bible.json  flask.json  gin.json  guava.json  humanizer.json  jiff.json  jq.json  okhttp.json  ripgrep.json  ripgrep_semantic.json  ripgrep_write.json  serde.json  sinatra.json  slim.json  tokio.json  tokio_semantic.json
examples/: probe_java.rs  probe_kt.rs
reports/: assessment.md  benchmark-face-api-js-2026-03-03.md  todo-tracker.md
src/: cli.rs  daemon.rs  engine.rs  main.rs  mcp.rs
src/engine/: analysis.rs  api.rs  e2e_tests.rs  edit.rs  embed.rs  graph.rs  index.rs  mod.rs  nav.rs  search.rs  types.rs  util.rs
src/lang/: bash.rs  c.rs  cpp.rs  csharp.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
tokenwise/changes/adopt-tldr-best-ideas/: design.md  proposal.md  tasks.md
tokenwise/changes/adopt-tldr-best-ideas/specs/: requirements.md
