[package]
name = "yoyo"
version = "0.16.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "io-util", "io-std", "macros"] }
rayon = "1.10"
tree-sitter = "0.26.6"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile = "3"

