[package]
name = "yoyo"
version = "0.20.5"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "io-util", "io-std", "macros"] }
rayon = "1.10"
tree-sitter = "0.26.6"
ast-grep-core = "0.41.0"
ast-grep-language = "0.41.0"
fastembed = "5.12.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

